updated portfolio for 1.2 module project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Aidan Torrence</h1>
     </header>
-    <section>
+    <section class="navbar">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
